docs_source/v3.3/Attribution/adjust.md
---
title: "Adjust"
slug: "adjust"
excerpt: "Integrate Purchases SDK with Adjust for precise revenue tracking"
hidden: false
metadata: 
  title: "Adjust Revenue Integration – RevenueCat"
  description: "With our Adjust integration, you can accurately track subscriptions generated from Adjust campaigns, allowing you to know precisely how much revenue your campaigns generate. And more!"
  image: 
    0: "https://files.readme.io/4b44ec4-60993e3c40039b67596bcc8c_slack-preview.png"
    1: "60993e3c40039b67596bcc8c_slack-preview.png"
    2: 1200
    3: 627
    4: "#f45476"
createdAt: {}
updatedAt: "2022-01-05T18:03:47.609Z"
---
With our Adjust integration you can:
* Accurately track subscriptions generated from Adjust campaigns, allowing you to know precisely how much revenue your campaigns generate.
* Send trial conversions and renewals directly from RevenueCat to Adjust, allowing for tracking without an app open.
* Continue to follow your cohorts for months to know the long tail revenue generated by your campaigns.

# 1. Install Adjust SDK 

Before RevenueCat can integrate with Adjust, your app should be running the latest Adjust SDK. Refer to the [Adjust developer documentation](https://help.adjust.com/sdk) for the latest installation instructions.

# 2. Send device data to RevenueCat

The Adjust integration requires some device-specific data. RevenueCat will only send events into Adjust if the below [Subscriber Attributes](doc:subscriber-attributes) keys have been set for the device.
[block:parameters]
{
  "data": {
    "h-0": "Key",
    "h-1": "Description",
    "h-2": "Required",
    "1-0": "`$idfa`",
    "2-0": "`$gpsAdId`",
    "3-0": "`$androidId`",
    "1-2": "✅ (recommended)",
    "2-2": "✅ (recommended)",
    "3-2": "✅ (recommended)",
    "5-2": "✅ (recommended)",
    "5-0": "`$ip`",
    "1-1": "iOS [advertising identifier](https://developer.apple.com/documentation/adsupport/asidentifiermanager/1614151-advertisingidentifier) UUID",
    "2-1": "Google [advertising identifier](https://developers.google.com/android/reference/com/google/android/gms/ads/identifier/AdvertisingIdClient.Info)",
    "5-1": "The IP address of the device",
    "3-1": "Android [device identifier](https://developer.android.com/reference/android/provider/Settings.Secure#ANDROID_ID)",
    "4-0": "`$idfv`",
    "4-1": "iOS [vender identifier](https://developer.apple.com/documentation/uikit/uidevice/1620059-identifierforvendor) UUID",
    "4-2": "✅ (recommended)",
    "0-0": "`$adjustId`",
    "0-1": "Adjust Id. The unique Adjust identifier for the user",
    "0-2": "✅ (required)"
  },
  "cols": 3,
  "rows": 6
}
[/block]
These properties can be set manually, like any other [Subscriber Attributes](doc:subscriber-attributes), or through the helper methods to `collectDeviceIdentifiers()` and `setAdjustId()`. 
[block:code]
{
  "codes": [
    {
      "code": "import AdSupport\n\nfunc application(_ application: UIApplication, didFinishLaunchingWithOptions launchOptions: [UIApplication.LaunchOptionsKey: Any]?) -> Bool {\n  \n  \tPurchases.configure(withAPIKey: \"public_sdk_key\")\n  \n  \t// ... Configure Adjust SDK and set delegate\n\n\n\t// Automatically collect the $idfa, $idfv, and $ip values\n\tPurchases.shared.collectDeviceIdentifiers() \n\n\t// Set the Adjust Id on app launch if it exists\n  \tif let adjustId = Adjust.adid() {\n    \tPurchases.shared.setAdjustID(adjustId)\n\t}\n  \n  // ..\n}\n\n\n// IMPORTANT: - Set the Adjust Id when it becomes available, if it\n// didn't exist on app launch\nextension AppDelegate: AdjustDelegate {\n    func adjustAttributionChanged(_ attribution: ADJAttribution?) {\n        if let adjustId = attribution?.adid {\n            Purchases.shared.collectDeviceIdentifiers()\n          \tPurchases.shared.setAdjustID(adjustId)\n        }\n    }\n}",
      "language": "swift",
      "name": "Swift"
    },
    {
      "code": "Purchases.configure(this, \"my_api_key\");\n\n\n// Automatically collect the $gpsAdId, $androidId, and $ip values\nPurchases.getSharedInstance().collectDeviceIdentifiers();\n\n// Set the Adjust Id on app launch if it exists\nif (Adjust.getAdid() != Null) {\n\tPurchases.getSharedInstance().setAdjustID(Adjust.getAdid());\n}\n\n\n// IMPORTANT: - Set the Adjust Id when it becomes available, if it\n// didn't exist on app launch\nconfig.setOnAttributionChangedListener(new OnAttributionChangedListener() {\n    @Override\n    public void onAttributionChanged(AdjustAttribution attribution) {\n        Map<String, String> data = new HashMap<String, String>();\n      \n      \tPurchases.getSharedInstance().collectDeviceIdentifiers();\n      \tPurchases.getSharedInstance().setAdjustID(attribution.adid);\n    }\n});",
      "language": "java"
    }
  ]
}
[/block]
You should make sure to set attributes after the *Purchases SDK* is configured, and before the first purchase occurs. It's safe to set this multiple times, as only the new/updated values will be sent to RevenueCat.

[block:callout]
{
  "type": "danger",
  "title": "Device identifiers with iOS App Tracking Transparency (iOS 14.5+)",
  "body": "If you are requesting the App Tracking permission through ATT to access the IDFA, you can call `.collectDeviceIdentifiers()` *again* if the customer accepts the permission to update the `$idfa` attribute in RevenueCat."
}
[/block]

[block:callout]
{
  "type": "info",
  "title": "Import AdSupport Framework (iOS)",
  "body": "The AdSupport framework is required to access the IDFA parameter on iOS. Don't forget to import this into your project."
}
[/block]

[block:image]
{
  "images": [
    {
      "image": [
        "https://files.readme.io/caf9cda-Screen_Shot_2020-09-14_at_7.09.36_PM.png",
        "Screen Shot 2020-09-14 at 7.09.36 PM.png",
        649,
        155,
        "#2b292b"
      ]
    }
  ]
}
[/block]

[block:callout]
{
  "type": "danger",
  "body": "Make sure to remove all client-side tracking of revenue. Since RevenueCat will be sending events for all revenue actions, tracking purchases with the Adjust SDK directly can lead to double counting of revenue in Adjust.",
  "title": "Remove any client-side purchase tracking"
}
[/block]
## (Optional) Send campaign data to RevenueCat
RevenueCat itself is not an attribution network, and can't determine which specific ad drove an install/conversion. However, if you're able to collect this information from another source, such as Adjust, it's possible to attach it to a user in RevenueCat using [Subscriber Attributes](doc:subscriber-attributes)  as well.
The below reserved key names can be used to optionally attach campaign data to a user. This data will then be sent through to other downstream analytics integrations and accessible via APIs and webhooks.
[block:parameters]
{
  "data": {
    "h-0": "Key",
    "0-0": "`$mediaSource`",
    "1-0": "`$campaign`",
    "2-0": "`$adGroup`",
    "3-0": "`$ad`",
    "4-0": "`$keyword`",
    "5-0": "`$creative`"
  },
  "cols": 1,
  "rows": 6
}
[/block]
# 3. Send RevenueCat events into Adjust

After you've set up the *Purchase* SDK to send attribution data from Adjust to RevenueCat, you can "turn on" the integration and configure the event tokens from the RevenueCat dashboard.

1. Navigate to your project in the RevenueCat dashboard and find the *Integrations* card in the left menu. Select **+ New** 
[block:image]
{
  "images": [
    {
      "image": [
        "https://files.readme.io/9ba8b4c-Screen_Shot_2021-12-01_at_12.23.10_PM.png",
        "Screen Shot 2021-12-01 at 12.23.10 PM.png",
        332,
        410,
        "#f5f6f5"
      ]
    }
  ]
}
[/block]
2. Choose **Adjust** from the integrations menu
3. Add your app tokens and event tokens for your iOS app and/or Android app
4. Select whether you want RevenueCat to report proceeds (after app store cut) or revenue (gross sales)
[block:image]
{
  "images": [
    {
      "image": [
        "https://files.readme.io/f0ba2b1-adjust.png",
        "adjust.png",
        1717,
        3551,
        "#f9f9f9"
      ],
      "caption": "Adjust configuration screen"
    }
  ]
}
[/block]
##(Optional) S2S Adjust Authentication
If you've enabled [S2S authentication on Adjust](https://help.adjust.com/en/article/server-to-server-s2s-security), fill out the OAuth token field in the RevenueCat Adjust settings page.
[block:image]
{
  "images": [
    {
      "image": [
        "https://files.readme.io/8000c8d-Screen_Shot_2020-11-10_at_9.45.27_AM.png",
        "Screen Shot 2020-11-10 at 9.45.27 AM.png",
        1688,
        360,
        "#f9fafa"
      ]
    }
  ]
}
[/block]

[block:callout]
{
  "type": "danger",
  "title": "Missing Authentication Token Error (401)",
  "body": "If you're getting an error that looks like this:\n```\n{\"error\":\"Event request failed (missing authentication token)\"}\n```\nThen you have [Adjust S2S Authentication](https://help.adjust.com/en/article/server-to-server-s2s-security) enabled and you need to follow this step to provide your authentication token to RevenueCat."
}
[/block]
# 4. Testing the Adjust integration

You can test the Adjust integration end-to-end before going live. It's recommended that you test the integration is working properly for new users, and any existing users that may update their app to a new version.

## Make a sandbox purchase with a new user
Simulate a new user installing your app, and go through your app flow to complete a sandbox purchase.

## Check that the required device data is collected
Navigate the the [Customer View](doc:customers) for the test user that just made a purchase. Make sure that all of the required data from step 1 above is listed as attributes for the user.

## Adjust testing console
Adjust provides a testing console to verify attribution data for sandbox users before moving to production. We recommend you follow their testing guide if you're submitting an app for the first time with Adjust attribution.

**[Adjust Testing Console Docs :fa-arrow-right:](https://docs.adjust.com/en/testing-console/)**

## Verifying sandbox events
RevenueCat will send Sandbox subscription events to Adjust's in sandbox mode. You can see Adjust sandbox events using the following filter in Adjust:
[block:image]
{
  "images": [
    {
      "image": [
        "https://files.readme.io/00dd960-dccd96f-Screen_Shot_2018-12-14_at_8.03.54_PM.png",
        "dccd96f-Screen_Shot_2018-12-14_at_8.03.54_PM.png",
        1605,
        1682,
        "#eef3f5"
      ],
      "caption": "Use the \"SANDBOX MODE\" filter in Adjust to see sandbox events from RevenueCat",
      "sizing": "80"
    }
  ]
}
[/block]

[block:callout]
{
  "type": "danger",
  "title": "Error codes",
  "body": "If you notice failed in events in your Adjust settings in the RevenueCat dashboard, take a look at [Adjust's docs](https://help.adjust.com/en/article/s2s-api-reference?src=search#event-submission-responses) on what the error codes might mean."
}
[/block]

[block:callout]
{
  "type": "success",
  "title": "You've done it!",
  "body": "You should start seeing events from RevenueCat appear in Adjust"
}
[/block]
# Sample Event

Below is a sample event sent to Adjust. The type of the event (e.g. initial purchase) is defined by the `event_token`. Note that product identifiers, subscriber attributes, app user IDs, etc. don't get sent to Adjust.
[block:code]
{
  "codes": [
    {
      "code": "{\"app_token\": \"qxc4ayziw3v4\", \"event_token\": \"rbaz31\", \"s2s\": 1, \"created_at_unix\": 1640995185, \"adid\": \"e2a17d0063e62f84fab13c8553ea7ec5\", \"environment\": \"production\", \"currency\": \"USD\", \"revenue\": 34.511, \"idfa\": \"00000000-0000-0000-0000-000000000000\", \"idfv\": \"B6149774-2A16-064D-EAAC-453F2E313B2F\", \"ip_address\": \"31.3.154.197\"}",
      "language": "json"
    }
  ]
}
[/block]